--- a/src/routes/virtual-photography/Portfolio/Gallery.css
+++ b/src/routes/virtual-photography/Portfolio/Gallery.css
@@ -2,13 +2,21 @@
   /*color: red;*/
   flex-shrink: 2;
   display: flex;
+  justify-content: center;
   /*min-width: 250px;*/
 }
 
-.galleryItem-title {
+.galleryItem-row {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
   margin-top: 1rem;
+}
+
+.galleryItem-title {
   font-size: 48px;
   display: block;
+  margin: 0;
 }
 
 .galleryItem-year {
@@ -22,6 +30,7 @@
 }
 
 .galleryItem-description {
+  font-family: 'Cutive';
   font-size: 20px;
   display: inline-block;
   margin:  0 4px;
