--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 :root {
-	--wordle-yellow: rgb(255, 204, 0);
-	--worlde-green: rgb(0, 204, 136);
-	--wordle-black: rgb(24, 26, 27);
-
 	--color-tone-1: #000000;
 	--color-tone-2: #787c7e;
 	--color-tone-3: #878a8c;
@@ -10,34 +6,43 @@
 	--color-tone-5: #edeff1;
 	--color-tone-6: #f6f7f8;
 	--color-tone-7: #ffffff;
-	--green: #6aaa64;
-	--darkenedGreen: #538d4e;
-	--yellow: #c9b458;
-	--darkenedYellow: #b59f3b;
 	--lightGray: #d8d8d8;
 	--gray: #86888a;
 	--darkGray: #939598;
 	--white: #fff;
 	--black: #212121;
-	--orange: #f5793a;
-	--blue: #85c0f9;
-	--red: #9F0000;
-	--darkenedRed: #850000;
 }
 
-#wordleList-app {
+@font-face {
+	font-family: 'Cutive';
+	font-style: normal;
+	font-weight: 400;
+	src: url('/public/cutive.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Red Hat';
+  src: url('/public/redhat.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+	margin: 0;
+	font-family: 'Cutive', sans-serif;
+
+	background: black;
+	/*color: var(--text-color);*/
+
+	color: #F03E88;
+}
+
+
+#personal-site {
 	--text-color: var(--color-tone-1);
 	--tile-text-color: var(--color-tone-7);
 	--background2: var(--color-tone-5);
 	--background:  var(--color-tone-7);
-
-	color: var(--text-color);
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-
 }
 
 @media (prefers-color-scheme: dark) {
@@ -54,7 +59,7 @@
 	}
 }
 
-#wordleList-app.nightMode-on {
+#personal-site.nightMode-on {
 	--color-tone-1: #ffffff;
 	--color-tone-2: #818384;
 	--color-tone-3: #565758;
@@ -66,7 +71,7 @@
 	--tile-text-color: var(--color-tone-1);
 }
 
-#wordleList-app.nightMode-off {
+#personal-site.nightMode-off {
 	--color-tone-1: #000000;
 	--color-tone-2: #787c7e;
 	--color-tone-3: #878a8c;
@@ -78,28 +83,16 @@
 	/*--tile-text-color: var(--color-tone-1);*/
 }
 
-@font-face {
-	font-family: 'Cutive';
-	font-style: normal;
-	font-weight: 400;
-	src: url('/public/cutive.ttf') format('truetype');
-}
-
-body {
-	margin: 0;
-	font-family: 'Cutive';
-}
-
 body.noscroll {
 	overflow: hidden;
 }
 
 button {
-	font-family: 'Cutive';
+	font-family: 'Cutive', sans-serif;
 }
 
 a {
-	font-family: 'Cutive';
+	font-family: 'Cutive', sans-serif;
 }
 
 .f-row {
@@ -113,10 +106,7 @@ a {
 }
 
 #root {
-	width: 100vw;
-	display: flex;
-	justify-content: center;
-	font-family: 'Cutive';
+	font-family: 'Cutive', sans-serif;
 	color: var(--text-color);
 }
 
