--- a/src/routes/virtual-photography/Portfolio/Portfolio.css
+++ b/src/routes/virtual-photography/Portfolio/Portfolio.css
@@ -1,12 +1,5 @@
-@font-face {
-  font-family: 'Red Hat';
-  src: url('/public/redhat.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
-
 .react-portfolio {
-  font-family: 'Red Hat';
+  font-family: 'Red Hat', sans-serif;
   font-size: 24px;
   margin: 0 auto;
   z-index: 0;
