--- a/src/routes/virtual-photography/Portfolio/Gallery.css
+++ b/src/routes/virtual-photography/Portfolio/Gallery.css
@@ -1,15 +1,24 @@
+.galleryItem-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .galleryItem {
   /*color: red;*/
-  flex-shrink: 2;
   display: flex;
   justify-content: center;
   /*min-width: 250px;*/
+  flex: 0 1 25%;
+}
+
+@media (max-width: 450px) {
+  .galleryItem {
+    flex: 0 1 50%;
+  }
 }
 
 .galleryItem-row {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
+  display: inline-block;
   margin-top: 1rem;
 }
 
@@ -30,7 +39,7 @@
 }
 
 .galleryItem-description {
-  font-family: 'Cutive';
+  font-family: 'Cutive', sans-serif;
   font-size: 20px;
   display: inline-block;
   margin:  0 4px;
