--- a/src/routes/virtual-photography/Portfolio/Gallery.css
+++ b/src/routes/virtual-photography/Portfolio/Gallery.css
@@ -24,7 +24,7 @@
 
 .galleryItem-title {
   font-size: 48px;
-  display: block;
+  display: inline-block;
   margin: 0;
 }
 
@@ -60,6 +60,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
   /*max-width: 100vw;*/
   /*overflow-x: scroll;*/
 }
