--- a/src/routes/music/AliasSelector.css
+++ b/src/routes/music/AliasSelector.css
@@ -1,14 +1,25 @@
+.aliasSelector-container {
+  color: var(--pink);
+}
+
 .aliasOption {
   font-size: 1.5rem;
   margin: 0.5rem 0;
   cursor: pointer;
+  background: transparent;
+  border: 0;
 }
 
 .aliasOption.selected {
-  font-size: 1.75rem;
+  font-size: 2rem;
+  text-decoration: underline;
 }
 
 .aliasSelector-container {
   padding: 1rem 0;
   font-size: 1.25rem;
+}
+
+.aliasOption-divider {
+  font-size: 1rem;
 }
