--- a/src/routes/virtual-photography/Portfolio/Gallery.css
+++ b/src/routes/virtual-photography/Portfolio/Gallery.css
@@ -65,3 +65,12 @@
   /*max-width: 100vw;*/
   /*overflow-x: scroll;*/
 }
+
+.galleryItem-viewMore {
+  text-align: center;
+  margin: 1rem 0;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  font-size: 2.25rem;
+}
