--- a/src/routes/virtual-photography/Portfolio/Gallery.css
+++ b/src/routes/virtual-photography/Portfolio/Gallery.css
@@ -18,9 +18,12 @@
 }
 
 .galleryItem-row {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
   margin-top: 1rem;
   align-items: baseline;
+  padding: 0 2rem;
+  justify-content: center;
 }
 
 .galleryItem-title {
@@ -38,7 +41,8 @@
   font-family: 'Cutive', sans-serif;
   font-size: 20px;
   display: inline-block;
-  margin:  0 4px;
+  margin: 16px 4px;
+  text-align: center;
 }
 
 .galleryItem-year {
