--- a/src/routes/mods/ScreenshotCompare.css
+++ b/src/routes/mods/ScreenshotCompare.css
@@ -1,13 +1,15 @@
 .screenshotCompare-container {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 .screenshotCompare {
 	display: block;
 	position: relative;
-	width: 500px;
-	max-width: 500px;
+	width: 100%;
+	max-width: 600px;
 }
 
 .screenshotCompare.active .screenshotCompare-modded {
@@ -28,4 +30,28 @@
 
 .screenshotCompare-label {
 	font-size: 1.25rem;
+}
+
+.screenshotCompare-thumbContainer {
+	max-width: 100vw;
+	overflow-x: scroll;
+	display: flex;
+	flex-direction: row;
+}
+
+.screenshotCompare-thumb {
+	width: 200px;
+	padding: 4px;
+	margin: 4px;
+	cursor: pointer;
+}
+
+.screenshotCompare-thumb:hover {
+	border: 1px dotted var(--pink);
+	margin: 3px;
+}
+
+.screenshotCompare-thumb.active {
+	border: 1px solid var(--pink);
+	margin: 3px;
 }
