Various styling updates

--- a/src/routes/music/AlbumEmbed.css
+++ b/src/routes/music/AlbumEmbed.css
@@ -1,9 +1,11 @@
 .albumEmbed {
   margin: 0.5rem 0;
+  max-width: 600px;
 }
 
 .albumEmbed-title {
-  font-size: 1.75rem;
+  font-size: 2rem;
+  /*text-decoration: underline;*/
 }
 
 .albumEmbed-year {
@@ -16,13 +18,4 @@
 
 .albumEmbed-desc {
   font-size: 1.15rem;
-}
-
-.aliasOption.selected {
-  font-size: 1.75rem;
-}
-
-.aliasSelector-container {
-  padding: 1rem 0;
-  font-size: 1.25rem;
 }
