--- a/src/routes/music/aliases/AliasSection.css
+++ b/src/routes/music/aliases/AliasSection.css
@@ -12,3 +12,10 @@
 	font-size: 1.5rem;
 	text-align: center;
 }
+
+.alias-albumContainer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+}
