--- a/src/routes/dev/Dev.css
+++ b/src/routes/dev/Dev.css
@@ -1,3 +1,15 @@
 .devPage {
-	
+	font-size: 1.25rem;
+}
+
+.devPage-item {
+	padding: 6px 0;
+}
+
+.devPage-siteTitle {
+	font-size: 1.5rem;
+}
+
+.devPage-siteDetails {
+	font-size: 1.25rem;
 }
