Update dev page

--- a/src/routes/dev/Dev.css
+++ b/src/routes/dev/Dev.css
@@ -1,5 +1,6 @@
 .devPage {
 	font-size: 1.25rem;
+	position: relative;
 }
 
 .devPage a:hover {
@@ -7,7 +8,6 @@
 }
 
 .devPage code {
-	background-color: var(--codeGrey);
 	text-transform: lowercase;
 }
 
@@ -19,12 +19,17 @@
 }
 
 .devPage-itemList {
-	margin: 1rem 3rem;
+	margin: 1rem 50px;
 }
 
 .devPage-item {
-	margin: 6px 0;
+	margin: 12px 0;
 	list-style-type: '~$ ';
+}
+
+.devPage-scope {
+	list-style-type: none;
+	/*position: relative;*/
 }
 
 .devPage-detail {
