--- a/src/viz/Scope.css
+++ b/src/viz/Scope.css
@@ -4,8 +4,10 @@
 }
 
 .viz-container {
-  height: 100%;
+  height: 400px;
   width: 100%;
   position: absolute;
   z-index: 2;
+  left: 0;
+  bottom: -280px;
 }
