--- a/src/pages/global.scss
+++ b/src/pages/global.scss
@@ -26,12 +26,12 @@
 	font-family: 'Cutive';
 	font-style: normal;
 	font-weight: 400;
-	src: url('/public/cutive.ttf') format('truetype');
+	src: url('/cutive.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Red Hat';
-  src: url('/public/redhat.woff2') format('woff2');
+  src: url('/redhat.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
