Add Murder-Suicide EP, begin adding artwork

--- a/src/components/music/AlbumEmbed.scss
+++ b/src/components/music/AlbumEmbed.scss
@@ -4,6 +4,10 @@
   padding: 10px;
 }
 
+.albumEmbed-art {
+  width: 100%;
+}
+
 .albumEmbed-title {
   font-size: 2rem;
   /*text-decoration: underline;*/
