--- a/src/components/music/aliases/AliasSection.scss
+++ b/src/components/music/aliases/AliasSection.scss
@@ -4,8 +4,9 @@
 }
 
 .alias-releaseType {
-	font-size: 1.75rem;
+	font-size: 2.25rem;
 	text-align: center;
+	margin: 0.5em 0;
 }
 
 .alias-description {
@@ -15,26 +16,12 @@
 
 .alias-releases {
 	display: flex;
+	grid-auto-rows: max-content;
+	grid-auto-columns: max-content;
+	// grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	grid-template-rows: auto;
 	flex-direction: row;
 	justify-content: space-evenly;
-	align-items: center;
+	align-items: self-end;
 	flex-wrap: wrap;
-}
-
-.alias-albums {
-		.albumEmbed {
-		max-width: 700px;
-	};
-}
-
-.alias-eps {
-		.albumEmbed {
-		max-width: 500px;
-	};
-}
-
-.alias-singles {
-		.albumEmbed {
-		max-width: 300px;
-	};
 }
