--- a/src/components/music/aliases/AliasSection.scss
+++ b/src/components/music/aliases/AliasSection.scss
@@ -7,6 +7,9 @@
 	font-size: 2.25rem;
 	text-align: center;
 	margin: 0.5em 0;
+	text-transform: lowercase;
+	letter-spacing: 5px;
+	// text-decoration: underline;
 }
 
 .alias-description {
