--- a/src/components/virtual-photography/Portfolio/Gallery.css
+++ b/src/components/virtual-photography/Portfolio/Gallery.css
@@ -68,7 +68,7 @@
 
 .galleryItem-viewMore {
   text-align: center;
-  margin: 1rem 0;
+  margin: 1rem auto;
   width: auto;
   display: flex;
   justify-content: center;
