--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,5 +1,18 @@
 @use 'global';
 
 .indexPage {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
 
+	h3 {
+		font-size: 1.5rem;
+		// margin: 8px 0;
+	}
+
+	p {
+		margin-top: 0;
+		font-size: 1.25rem;
+	}
 }
