--- a/src/components/virtual-photography/Portfolio/ClickableImage.css
+++ b/src/components/virtual-photography/Portfolio/ClickableImage.css
@@ -1,5 +1,4 @@
 .clickableImage {
-  margin: 4px;
   object-fit: cover;
   position: relative;
   display: flex;
@@ -73,7 +72,7 @@
 
 .clickableImage .clickableImage-img {
   /*width: 100%;*/
-  height: 300px;
+  /*height: 300px;*/
   display: block;
   background-repeat: no-repeat;
   background-position: 50% 50%;
