--- a/src/components/virtual-photography/Portfolio/Gallery.css
+++ b/src/components/virtual-photography/Portfolio/Gallery.css
@@ -1,6 +1,7 @@
 .galleryItem-container {
   display: flex;
   flex-direction: column;
+  padding: 0 16px;
 }
 
 .galleryItem {
@@ -9,6 +10,8 @@
   justify-content: center;
   /*min-width: 250px;*/
   flex: 0 1 25%;
+  margin: 4px 0;
+
 }
 
 @media (max-width: 450px) {
@@ -42,7 +45,7 @@
   font-family: 'Cutive', sans-serif;
   font-size: 20px;
   display: inline-block;
-  margin: 16px 4px;
+  margin: 16px 8px;
   text-align: center;
 }
 
@@ -69,5 +72,5 @@
   width: auto;
   display: flex;
   justify-content: center;
-  font-size: 2.25rem;
+  font-size: 2rem;
 }
