--- a/src/components/virtual-photography/Portfolio/Modal.css
+++ b/src/components/virtual-photography/Portfolio/Modal.css
@@ -22,6 +22,15 @@
   width: 100%;
 }
 
+.modal-pageButtons {
+  padding: 8px 0 0 0;
+}
+
+.modal-pageButton {
+  margin: 0 4px;
+}
+
+.modal-pageButton,
 .modal-closeButton {
   background-color: transparent;
   border: 1px var(--pink) solid;
@@ -30,6 +39,7 @@
   border-radius: 2px;
 }
 
+.modal-pageButton:hover,
 .modal-closeButton:hover {
   color: black;
   background-color: var(--pink);
@@ -99,6 +109,8 @@
 }
 
 .modal-counter {
+  position: absolute;
+  padding: 16px 0 0 16px;
   top: 0;
   left: 0;
 }
