--- a/src/components/virtual-photography/Portfolio/Modal.css
+++ b/src/components/virtual-photography/Portfolio/Modal.css
@@ -6,8 +6,8 @@
 
 .modal-contents {
   display: flex;
-  padding: 40px 50px;
-  height: calc(100vh - 80px);
+  padding: 20px 50px;
+  height: calc(100vh - 40px);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -23,7 +23,7 @@
 }
 
 .modal-pageButtons {
-  padding: 8px 0 0 0;
+  padding: 16px 0 0 0;
 }
 
 .modal-pageButton {
@@ -37,6 +37,7 @@
   color:  var(--pink);
   font-size: 1.25rem;
   border-radius: 2px;
+  backdrop-filter: blur(10px);
 }
 
 .modal-pageButton:hover,
@@ -110,9 +111,9 @@
 
 .modal-counter {
   position: absolute;
-  padding: 16px 0 0 16px;
-  top: 0;
-  left: 0;
+  /*padding: 16px 0 0 16px;*/
+  top: 30px;
+  left: 30px;
 }
 
 .ReactModal__Overlay {
