Styling tweaks, add photography header

--- a/src/pages/VirtualPhotography.scss
+++ b/src/pages/VirtualPhotography.scss
@@ -1,3 +1,12 @@
 .galleryPage.galleryItem {
 	flex-basis: 12.5%;
 }
+
+.virtualPhotography-title {
+	display: block;
+	margin: auto;
+	font-size: 3rem;
+	text-align: center;
+	letter-spacing: 10px;
+	text-transform: lowercase;
+}
