--- a/src/components/music/ReleasePage.scss
+++ b/src/components/music/ReleasePage.scss
@@ -10,13 +10,14 @@
   align-items: center;
   background-size: cover;
   padding-bottom: 40px;
-  background-color: rgba(0,0,0,0.2)
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .releasePage-title {
   font-size: 2.5rem;
   margin-bottom: 0;
   letter-spacing: 10px;
+  margin-top: 8px;
   /*text-decoration: underline;*/
 }
 
@@ -37,6 +38,21 @@
   color: var(--dullGrey);
 }
 
+.releasePage-genres,
+.releasePage-desc,
+.releasePage-year,
+.releasePage-title,
+.releasePage-alias {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 4px;
+}
+
+.releasePage-alias {
+  margin-bottom: 0;
+  letter-spacing: 8px;
+  font-size: 2rem;
+}
+
 .releasePage-genres {
   font-size: 1.25rem;
   margin: 10px 0;
@@ -44,17 +60,32 @@
 
 .releasePage-desc {
   font-size: 1.15rem;
-  margin-bottom: 8px;
+  max-width: 700px;
 }
 
 .releasePage-bandcamp {
-  padding-top: 10px;
+  // padding-top: 10px;
   width: 100%;
   max-width: 700px;
 }
+
+.releasePage-headerContainer {
+ width: 100%;
+ backdrop-filter: blur(10px);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+
 .releasePage-header {
-  width: 100%;
+  // width: 100%;
   text-align: center;
-  backdrop-filter: blur(10px);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 700px;
+  background-color: rgba(0, 0, 0, 0.5);
   /*border-radius: ;*/
 }
