update global background color

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -40,7 +40,7 @@ body {
 	margin: 0;
 	font-family: 'Cutive', sans-serif;
 
-	background: black;
+	background: var(--black);
 	/*color: var(--text-color);*/
 
 	color: var(--pink);
