--- a/src/components/viz/Scope.css
+++ b/src/components/viz/Scope.css
@@ -1,13 +1,35 @@
 #canvas {
-  height: 100%;
   width: 100%;
+  height: 128px;
 }
 
 .viz-container {
-  height: 400px;
   width: 100%;
-  position: absolute;
-  z-index: 2;
-  left: 0;
-  bottom: -280px;
+  display: flex;
+  flex-direction: row;
+  z-index: -1;
+  left: -40px;
+  top: 0;
+}
+
+.scope-container {
+  transform: translateX(-30px);
+  padding-top: 20px;
+  bottom: 20px;
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+}
+
+#scope-icon {
+  top: 0;
+  left: 100px;
+  z-index: -5;
+  font-size: 8rem;
+  height: 128px;
+}
+
+#scope-blurtext {
+  cursor: pointer;
+  font-size: 2rem;
 }
