--- a/src/components/music/aliases/Morphologist.scss
+++ b/src/components/music/aliases/Morphologist.scss
@@ -1,5 +1,6 @@
 #alias-morpgologist {
 	text-align: center;
+	font-family: 'Montreal';
 
 	.bandcampEmbed iframe {
 		border: 1px solid var(--green) !important;
