--- a/src/components/music/AlbumEmbed.scss
+++ b/src/components/music/AlbumEmbed.scss
@@ -33,11 +33,14 @@
 
 .albumEmbed-label {
   font-size: 1.5rem;
+  margin-bottom: 4px;
+  margin-top: 0;
 }
 
 .albumEmbed-year {
   font-size: 1.125rem;
-  margin: 8px 0;
+  margin-bottom: 4px;
+  margin-top: 0;
 }
 
 .albumEmbed-genres {
